bk_ida/gobmkida/c3/is_edge_vertex
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_edge_vertex/src/engine/board.c:1778:32: error: use of undeclared identifier 'byte_9C688D'
return board[pos + 19] == 3 || byte_9C688D[pos] == 3; 
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_edge_vertex/src/obj/1/board.o] Error 1
